# vsys

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  abgabe.tgz  cmake_install.cmake
abgabe/: CMakeLists.txt  README.md  protokoll.odt
abgabe/src/: client.cpp  server.cpp
client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
client/include/: client.h
client/src/: client.cpp
common/: CMakeLists.txt  Makefile  cmake_install.cmake
common/include/: common.h  config.h
common/src/: common.cpp  config.cpp
server/: CMakeLists.txt  Makefile  cmake_install.cmake
server/include/: get.h  list.h  put.h
server/src/: get.cpp  list.cpp  put.cpp  server.cpp
src/: CMakeLists.txt  client.cpp  server.cpp
